# pipevec

./: ARCHITECTURE  README.md  meson.build
pipevec/: meson.build  pipevec-errors.c  pipevec-errors.h  pipevec-tensor.c  pipevec-tensor.h  pipevec.h
tests/: meson.build
tests/pipevec/: meson.build  pipevec-tensor-test.cpp
